--- a/src/css/main.css
+++ b/src/css/main.css
@@ -37,22 +37,26 @@ canvas[data-running="false"] {
 	position: absolute;
 }
 
+.screen {
+    background-color: rgba(28, 28, 28, 0.85);
+}
+
 .startScreen {
 	z-index: 100;
 	width: 100%;
 	height: 100%;
 	position: absolute;
-	background-color: #1c1c1c;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-
-	transform: none;
-	transition: transform .2s;
+	top: 0;
+	left: 0;
+	-webkit-transform: none;
+	transition: -webkit-transform .2s;
 }
 
-.startScreen[data-display="false"] {
-	transform: translateX(-100%);
+.startScreen.hidden {
+	-webkit-transform: translate(-100%, 0);
 }
 
 .startScreen.wrapper {
@@ -77,7 +81,7 @@ canvas[data-running="false"] {
 
 .startScreen .wrapper {
 	height: 80%;
-	width: 95%;
+	width: 85%;
 	max-width: 400px;
 	box-sizing: border-box;
 	padding: 0 10px;
@@ -137,22 +141,23 @@ canvas[data-running="false"] {
     width: 100%;
     height: 100%;
     position: absolute;
-    background-color: rgba(0, 0, 0, 0.73);
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
     padding: 40px 8%;
     box-sizing: border-box;
-    transform: none;
-    transition: transform .2s;
+    -webkit-transform: none;
+	top: 0;
+	left: 0;
+    transition: -webkit-transform .2s;
 }
 
 .deadscreen .score {
 	text-align: right;
 }
 
-.deadScreen[data-display="false"] {
-	transform: translateX(100%);
+.deadScreen.hidden {
+	-webkit-transform: translate(100%, 0);
 }
 
 .deadScreen .wrapper {
@@ -169,18 +174,18 @@ canvas[data-running="false"] {
 .deadScreen .retry.Btn svg {
 	height: 100%;
 	fill: white;
-	transform-origin: 50% 54%;
-	transform: none;
-	transition: transform .1s;
+	-webkit-transform-origin: 50% 54%;
+	-webkit-transform: none;
+	transition: -webkit-transform .1s;
 	z-index: 100;
 }
 
 .deadScreen .retry.Btn svg:active {
-    transform: rotate(300deg);
+    -webkit-transform: rotate(300deg);
 }
 
 .deadScreen .retry.Btn svg:hover {
-    transform: rotate(30deg) scale(1.05);
+    -webkit-transform: rotate(30deg) scale(1.05);
 }
 
 .back.Btn {
@@ -231,17 +236,17 @@ canvas[data-running="false"] {
 	width: 100%;
 	height: 100%;
 	position: absolute;
-	background-color: #1c1c1c;
 	display: flex;
+	top: 0;
+	left: 0;
 	justify-content: center;
 	align-items: center;
-
-	transform: none;
-	transition: transform .2s;
+	-webkit-transform: none;
+	transition: -webkit-transform .2s;
 }
 
-.unlocksScreen[data-display="false"] {
-	transform: translateX(100%);
+.unlocksScreen.hidden {
+	-webkit-transform: translate(100%, 0);
 }
 
 .unlocksScreen .wrapper {
