--- a/src/css/main.css
+++ b/src/css/main.css
@@ -74,7 +74,7 @@ canvas[data-running="false"] {
 }
 
 .startScreen .title {
-    font-size: 620%;
+    font-size: 5.5em;
     margin: 0;
     text-align: center;
 }
@@ -191,8 +191,9 @@ canvas[data-running="false"] {
 .back.Btn {
 	position: absolute;
 	top: 80px;
-	left: 40px;
+	left: 20px;
 	cursor: pointer;
+	z-index: 10;
 }
 
 .back.Btn svg {
@@ -250,7 +251,7 @@ canvas[data-running="false"] {
 }
 
 .unlocksScreen .wrapper {
-	padding: 110px 50px;
+	padding: 140px 5% 5%;
     width: 100%;
     height: 100%;
     overflow: auto;
@@ -268,17 +269,27 @@ canvas[data-running="false"] {
 
 .unlocksItem {
 	width: 100%;
-	background-color: #4e4e4e;
+	background-color: rgba(78, 78, 78, 0.7);
 	padding: 15px;
 	box-sizing: border-box;
 	margin-bottom: 20px;
-    border-radius: 10px;
+	position: relative;
 }
 
 .unlocksItem .title {
 	font-size: 25px;
 	display: block;
 	margin-bottom: 5px;
+}
+
+.unlocksItem .progress_bar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 70%;
+    height: 100%;
+    background: rgb(183, 183, 183);
+    z-index: -1;
 }
 
 .row.int {
